Bug 160701 - OpenPGP warning when encrypting with an untrusted public key: rename from "Error" to "Warning"
Summary: OpenPGP warning when encrypting with an untrusted public key: rename from "Er...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: low trivial
Assignee: Aleksi Kallio
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks: OpenPGP
  Show dependency treegraph
 
Reported: 2024-04-16 22:24 UTC by steve
Modified: 2025-12-18 20:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot info message about encrypting with an untrusted public OpenPGP key (759.23 KB, image/png)
2024-04-16 22:24 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2024-04-16 22:24:10 UTC
Description:
Gladly https://bugs.documentfoundation.org/show_bug.cgi?id=160184 got resolved and OpenPGP encryption with untrusted keys is now possible.

A warning is shown beforehand. Currently that warning is labled "Error" which I find misleading and confusing. An error suggests that something is wrong with the software. That is not the case here.

Would it be possible to re-label the dialog as "Warning" which better suits the nature of the context in this case?

Steps to Reproduce:
1. open writer and write test
2. save document
3. in save dialog tick option "Encrypt with GPG key" and click "save" button
4. make sure you have an untrusted public OpenPGP key in your keyring and select that from the "Select Certificate" dialog

Actual Results:
Dialog with title "Error" is shown.

Expected Results:
Dialog title could be "Warning" instead.

There is a side-problem that the dialog gives no advice how to resolve the situation the warning is about, i.e. trust a key. But that is a complex problem and probably out of scope for LibreOffice at that point.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 38ed8100872913c64941927bba665e4bd1a44c12
CPU threads: 12; OS: macOS 14.4.1; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2024-04-16 22:24:25 UTC
Created attachment 193716 [details]
Screenshot info message about encrypting with an untrusted public OpenPGP key
Comment 2 Moritz Duge (Collabora) (a.k.a. kolAflash) 2024-05-02 16:31:24 UTC
Confirming the issue.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7e553a56c6a5aa7f4b1f01df52ed9607d3397cfc
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: x11
Locale: en-US (C); UI: en-US
Calc: threaded

The dialog window has been added in this two commits in the mentioned bug 160184.
https://git.libreoffice.org/core/+/6a049e417b029f3733fcee05f99a3e8875aefdb8%5E%21
https://git.libreoffice.org/core/+/c4023d3ec604abfff38be2053e2989c7ec2ba8c1%5E%21
Hint: Look there to find out what needs to be changed.

Marking this as easyHack.
Comment 3 Ekam 2024-07-17 20:13:38 UTC
So I will try and work on this issue. As this is my first issue please standby for any beginner mistakes. Any advice is appreciated.
Comment 4 Ekam 2024-07-17 21:28:43 UTC
Umm due to being unable to compile libreoffice(hardware limitations) I'm no longer working on this issue. Sorry!
Comment 5 Commit Notification 2025-10-20 08:03:52 UTC
kallial committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc2948b208a847b12a80bdf0af0e32fb76961f72

tdf#160701 Change OpenPGP untrusted key dialog type from "Error" to

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-10-30 03:25:18 UTC
kallial committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d4d6e7adfc4dc11077b6455d51f2590fd72212c1

tdf#160701 Change OpenPGP untrusted key dialog type from "Error" to

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.