tdf#160701 Change OpenPGP untrusted key dialog type from "Error" to

"Warning"

Change-Id: I626e7fa6861699d86490b63b8d3c1c7efc31206a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192586
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
(cherry picked from commit fc2948b208a847b12a80bdf0af0e32fb76961f72)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193125
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>